@@ -4,7 +4,9 @@ The "r99999" numbers are Subversion revision numbers.
 Changes for current svn
 =======================
 
- o r18036 xmlBlasterPlugins.xml supports now ${xy} replacement
+ o r18036-r18038 xmlBlasterPlugins.xml does now ${xy} replacement (before there was no such support)
+          You can switch replacement off with the 'replace' attribute, for example:
+          <attribute id='port' replace='false'>${socketPort}</attribute>
 
  o r18029 Bugfixes on server side:
    - client ping throws exception now if the callback listener exists but there is no associated session to it (happens on race 
